# phc-notebook-tools

./: .gitignore  README.md  pyproject.toml
phcnb/: cli.py
sandbox/: hello.js  in_file.txt  inputs.yml  output.ipynb  output.notebook  parameters.yml  test.cwl  test.inputs.yml  test.ipynb  test2.cwl  test2.ipynb
